Separate linting from testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,16 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Setup Python & Nox"
         uses: daisylb/setup-nox@v2
-      - run: nox
+      - run: nox -s test
+
+  # Set up as a separate job for a very small amount of parallelism and to
+  # avoid running multiple times under each OS like we do for testing.
+  lint:
+    runs-on: "ubuntu-latest"
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - run: pipx run nox -s lint
