--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,24 @@
 [build-system]
-build-backend = "hatchling.build"
-requires = [
-  "hatchling",
-]
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = "microvenv"
-version = "0.1.0"
-description = "A minimal re-implementation of Python's venv module."
+version = "2023.0.0"
+description = "A minimal re-implementation of Python's venv module"
+keywords = ["virtual environments", "venv"]
 readme = "README.md"
-license = "MIT"
-maintainers = [ { name = "Brett Cannon", email = "brett@python.org" } ]
-authors = [ { name = "Brett Cannon", email = "brett@python.org" } ]
+license = { file = "LICENSE" }
+maintainers = [{ name = "Brett Cannon", email = "brett@python.org" }]
+authors = [{ name = "Brett Cannon", email = "brett@python.org" }]
 requires-python = ">=3.7"
 classifiers = [
   "Development Status :: 3 - Alpha",
+  "License :: OSI Approved :: MIT License",
   "Environment :: Console",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
+  "Topic :: Software Development",
+  "Topic :: Utilities",
   "Natural Language :: English",
   "Operating System :: MacOS :: MacOS X",
   "Operating System :: POSIX :: Linux",
@@ -28,14 +29,11 @@ classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
-  "Topic :: Software Development",
-  "Topic :: Utilities",
 ]
 
 [project.optional-dependencies]
-dev = [
-  "pytest>=7.2.2",
-]
+test = ["pytest"]
+lint = ["black", "ruff"]
 
 [project.urls]
 source = "https://github.com/brettcannon/microvenv"
