--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"tamasfe.even-better-toml",
 		"charliermarsh.ruff",
 		"ms-python.black-formatter",
 		"ms-python.python",
