Set the status classifier to "beta"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ maintainers = [{ name = "Brett Cannon", email = "brett@python.org" }]
 authors = [{ name = "Brett Cannon", email = "brett@python.org" }]
 requires-python = ">=3.7"
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 4 - Beta",
   "License :: OSI Approved :: MIT License",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
