--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 name: "CI"
 
-on:
-  pull_request:
-    paths:
-      - ".github/workflows/ci.yml"
-      - "**.py"
+on: ["pull_request"]
 
 jobs:
   test:
