--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
       - run: pipx run nox -s test-${{ matrix.python-version }}
 
   # Set up as a separate job for a very small amount of parallelism and to
