--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.x"
       - run: pipx run build
